test/fail/MPTC_BoundVar2.curry
{-# LANGUAGE MultiParamTypeClasses, FunctionalDependencies #-}


class R a b where

class Q a where

instance R a b => Q [a] where
